output/file-kd/mse-base/resource/Ingress/[mse-base]agent-in-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8s.apisix.apache.org/enable-lane: 'false'
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/3SQMe+bMBTEv8vNmJBAEsPaqUvVoepSdXiYR3BDbMt+Sf8R4rtXDv+xkbz49O53p1tAwf7kmKx36OBY/vp4te5SXnUqrd899ihwtW5Ah6/uEjklFLix0EBC6BaQc15IrHcpf33/h40kljJaXxoSmTmDbCbs9aDrw7lX1Iy1akzdKzqPpNpjPVTmrI/V4YC1wEw9zy8chVA6ujE6PO9OjXZmRRd2osKQm7yLmyhN6NCO+7FqdVONp4M2mvXx1A7DYOqWTmNtmlbrc3PSxxz6GbPRrcOmpEAmy8JJ8lUKbHIxu43xZaaUvn06g032AwXifeaE7teCySf5b/XyGcxFZWhp/A0FJpGQuYFk2rw9mSvn4Rckjg+bayx4O4ZKD4MCwUd53d1vPUd0utL7dV2LFxgddtm1e7mwiT+eIRO/Rx7tB9bfa37/AgAA//+NNQadGQI [...]
    objectset.rio.cattle.io/id: 18d8327b-a4f3-4c3b-a7fa-953d0c785022
    k8s.apisix.apache.org/enable: ${apisix_switch}
    k8s.apisix.apache.org/priority: '0'
    k8s.apisix.apache.org/set-headers: null
    k8s.apisix.apache.org/filter-headers: null
    k8s.apisix.apache.org/filter-headers-expr: null
    k8s.apisix.apache.org/traffic-split-headers: null
    k8s.apisix.apache.org/traffic-split-percentage: null
    k8s.apisix.apache.org/traffic-split-service: null
  labels:
    app.name: yun-file-agent-pds
    objectset.rio.cattle.io/hash: 9f1f09840f628c8e8569dddc39a6f3c498874685
  name: agent-in-a
  namespace: test
spec:
  ingressClassName: apisix
  rules:
  - host: yun-file-agent-pds.ypcg-test.com
    http:
      paths:
      - backend:
          service:
            name: yun-file-agent-pds-svc-a
            port:
              number: 8081
        path: /file/agent
        pathType: Prefix
